@@ -2,6 +2,7 @@ if @opportunity.valid?
   page[:create_opportunity_arrow].replace_html "&#9658;"
   page[:create_opportunity_title].replace_html "Opportunities"
   page << "Effect.toggle('create_opportunity', 'blind', { duration: 0.1 });"
+  page[:create_opportunity].update ""
   page.insert_html :top, :opportunities, :partial => "opportunity", :collection => [ @opportunity ]
   page[dom_id(@opportunity)].visual_effect :highlight, :duration => 1.5
   if request.referer =~ /opportunities$/
