@@ -6,7 +6,10 @@ then you win. –- Mahatma Gandhi
 
 Wed, Mar 26, 2009
 ---------------------------------------------------------------------
-- Refactored custom Rails initializers.
+- Refactored custom Rails initializers and added custom date format.
+- Finished with [Edit Opportunity] including full controller and views specs.
+- Fixed JavaScript bug caused by not wiping out hidden create form.
+- Use String#shorten instead of truncate() helper.
 
 Tue, Mar 25, 2009
 ---------------------------------------------------------------------
